# Notify

./: .gitignore  Bot.ts  Cargo.toml  Command.ts  LICENSE  NotifyCommand.ts  Procfile  README.md  SetupCommand.ts  app.json  build.gradle.kts  index.js  index.ts  libs.versions.toml  notify.js  notify.ts  package-lock.json  package.json  settings.gradle.kts  setup.js  setup.ts  stateUpdate.js  stateUpdate.ts  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: Build.yml  Release.yml  codeql-analysis.yml  gradle-wrapper-validation.yml  kotlin.yml  node.js.yml  typescript.yml
core/: index.js
entity/: Cargo.toml
entity/src/: guild_preferences.rs  lib.rs  prelude.rs
games/: index.js
games/hangman/: index.js
gradle/: libs.versions.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
music/: index.js
people/: index.js
plug/: index.js
space/: index.js
src/: Bot.ts  Command.ts  NotifyCommand.ts  SetupCommand.ts  action.rs  main.rs  notify_target.rs  redis.ts  setup.ts  stateUpdate.ts
src/main/kotlin/: Bot.kt  Config.kt  EnvironmentVariables.kt  FallbackNotifyCommand.kt  Main.kt  NotifyReply.kt
src/main/kotlin/commands/: Command.kt  MessageCreateEvent.kt  NotifyCommand.kt
src/main/kotlin/configureInteraction/: configureInteraction.kt
src/main/kotlin/data/: Dao.kt  DataStore.kt  Database.kt  Datastore.kt  GuildPrefs.kt
src/main/kotlin/db/: Connection.kt  GuildPrefs.kt
src/main/kotlin/extensions/: ConfigureExtension.kt  ConfigureHybridExtension.kt  ConfigureInteraction.kt
src/main/kotlin/vcStateChange/: Action.kt  (+3 more)
(+25 files in other folders)
